# monte-carlo-options

./: .gitignore  LICENSE  app.py  cli.py  example.py  mypy.ini  pyproject.toml  readme.md  requirements.txt  ruff.toml  setup.py  votality.py
.github/workflows/: ci.yml
docs/: pyproject.toml
src/: __init__.py  black_scholes.py  calibration.py  greeks.py  option_pricer.py  simulator.py  validation.py  visualizer.py
src/models/: black_scholes.py
src/pricing/: american.py  european.py  greeks.py
tests/: test_2.py  test_accuracy.py  test_any_stock.py  test_pricer.py  test_streamlit.py
