[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "monte-carlo-options"
version = "1.0.0"
description = "Production-ready Monte Carlo options pricing system"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rayan Ali Essabri", email = "alirayanessabri@gmail.com"}
]
keywords = ["options", "pricing", "monte-carlo", "finance", "quantitative"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "joblib>=1.1.0",
    "numba>=0.55.0",
]

[project.optional-dependencies]
web = ["streamlit>=1.10.0", "yfinance>=0.1.70"]
dev = ["pytest>=6.2.0", "pytest-cov>=2.12.0", "black>=21.0", "flake8>=3.9.0"]

[project.scripts]
mco-pricer = "cli:main"

[project.urls]
Homepage = "https://github.com/RIORIORIORIROIRO/monte-carlo-options"
Repository = "https://github.com/RIORIORIORIROIRO/monte-carlo-options"
Documentation = "https://monte-carlo-options.readthedocs.io"